force-app/main/default/objects/Months_in_Destination__c/Months_in_Destination__c.object-meta.xml
<CustomObject>
    <label>Months in Destination</label>
    <nameField>
        <displayFormat>MD-{00000}</displayFormat>
        <label>Months in Destination Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Months in Destination</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>