force-app/main/default/objects/Months_in_Destination__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <formula>Text(Destination__r.Area__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>איזור</label>
    <type>Text</type>
</CustomField>