force-app/main/default/objects/Months_in_Destination__c/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <label>Destination</label>
    <referenceTo>Destination__c</referenceTo>
    <relationshipLabel>Months in Destination</relationshipLabel>
    <relationshipName>Months_in_Destination</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>