force-app/main/default/objects/Months_in_Destination__c/fields/Month_trip__c.field-meta.xml
<CustomField>
    <fullName>Month_trip__c</fullName>
    <label>חודש טיול</label>
    <type>Date</type>
</CustomField>